crates/tlang_test_runner/src/snapshots/tlang_test_runner__tests__known_failures_js_if_expressions_javascript@known_failures__js_if_expressions.tlang.snap
---
source: crates/tlang_test_runner/src/main.rs
description: Known failure - output may not match expected
expression: apply_redactions(&output)
input_file: tests/known_failures/js_if_expressions.tlang
---
[stdin]:209
    return if (times > 0) {
           ^^

SyntaxError: Unexpected token 'if'
    at [NODE_INTERNAL_STACK]
    at [NODE_INTERNAL_STACK]
    at [STDIN_WRAPPER]
    at [NODE_INTERNAL_STACK]
    at [NODE_INTERNAL_STACK]
    at [NODE_INTERNAL_STACK]
    at [NODE_INTERNAL_STACK]
    at [NODE_CORE_STACK]
    at [NODE_INTERNAL_STACK]
    at [NODE_INTERNAL_STACK]

Node.js [VERSION]
